- Cleanup style variables - Fix bookmark overflow/alignment

--- a/amundsen_application/static/js/components/common/Bookmark/BookmarkIcon/styles.scss
+++ b/amundsen_application/static/js/components/common/Bookmark/BookmarkIcon/styles.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   display: inline-block;
   height: 32px;
-  margin: -6px 0 -8px 4px;
+  margin-left: 4px;
   padding: 4px;
   vertical-align: top;
   width: 32px;
